# vacancy_parser

./: README.md  pyproject.toml
src/: api.py  main.py  vacancies.py
